# OG_Delineation

./: .gitignore  README.md  expand_og.py  find_ogs_ete3.py  find_ogs_ete4.py  get_basal_ogs.py  get_sp_per_level.py  get_species_tree.py  mafft.snakefile  newick2pickle.py  og_delineation.py  ogd_env.yml  ogd_env2.yml  parse_hmmscan.py  pyproject.toml  readme.md  run_ete4_smartview.py  run_general_get_groups.sh
apptainer_ogd/: create_ogd_img.def
benchmark/possvm/scripts/: Readme.md  Untitled.ipynb  annotate_possvm_trees.py  antp_fpI.json  best_possvm_fscore.tsv  best_possvm_prec.tsv  best_possvm_recall.tsv  calculate_fp_v2.py  compare_refog_myogs.py  convert_code2taxid.py  finf_basal_ogs_refogs.py  prds_fpI.json  stats_posvvm.py  tale_fpI.json
data/: OGD_props.txt  P53.fa.nw
data/smartview/: egg7_color_sciname.json  egg7_color_taxid.json
ogd/: __main__.py  annot_treeprofiler.py  basic_layouts.py  emapper_annotate.py  emapper_layouts.py  final_annotations.py  handle_input.py  import_layouts.py  main.py  messy_ogs.py  new_ortho_groups.py  new_outliers.py  new_utils.py  ogd_core.py  ortho_groups_v2.py  orthologs_groups.py  outliers_scores.py  pairs.py  prepare_outputs.py  recovery.py  run_ete4_smartview.py  select_duplications.py  select_dups.py  timer.py  tree_setup.py  utils.py
tests/: datasets.py  test.py  test_bugs.py  test_og_delineation.py  test_setup.py  test_step3.py
