[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "og-delineation"
version = "0.2.0"
description = "Orthologous Group Delineation from gene phylogenetic trees"
readme = "readme.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Ana Hernández" },   # <- ajusta nombre / añade email si quieres
]
dependencies = [
    "ete4>=4.4",
    "FastRoot",
    "numpy",
]

# Optional functional-annotation module (Linux only: see README).
[project.optional-dependencies]
emapper = ["eggnog-mapper"]

[project.scripts]
og-delineation = "ogd.main:main"

[tool.setuptools]
packages = ["ogd"]

[tool.setuptools.package-data]
ogd = ["data/smartview/*.json"]